# jobless_corner

./: .gitignore  LIVE_TV_BUG_REPORT.md  LIVE_TV_NOTES.md  README.md  settings.gradle.kts
.github/workflows/: pages.yml  release.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: remote.css  remote.html  remote.js
app/src/main/java/com/moviebox/tv/: App.kt  CrashActivity.kt  MainActivity.kt
app/src/main/java/com/moviebox/tv/data/: MissingEpisodeCatalog.kt  Models.kt  Recommendations.kt  Repository.kt  TastePrefs.kt  UnavailableCatalog.kt
app/src/main/java/com/moviebox/tv/debug/: BandwidthProbe.kt  (+5 more)
app/src/main/res/drawable/: ic_app.xml  ic_banner.xml
app/src/main/res/layout/: player_texture.xml
app/src/main/res/raw/: loader_dots.json
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: network_security_config.xml  update_provider_paths.xml
desktop/: build.gradle.kts
desktop-web/: .gitignore  PLANNING.md  next.config.js  package.json  tailwind.config.ts  tsconfig.json
desktop-web/src-tauri/: Cargo.toml  tauri.conf.json
desktop-web/src-tauri/capabilities/: default.json
desktop-web/src-tauri/icons/: icon.icns
desktop-web/src-tauri/src/: lib.rs  main.rs
desktop-web/src/app/: globals.css  layout.tsx  page.tsx
desktop-web/src/lib/h5/: api.ts  constants.ts  crypto.ts  types.ts
desktop/src/main/kotlin/com/moviebox/desktop/: H5Api.kt  Main.kt  VlcPlayer.kt
gradle/: libs.versions.toml
scripts/: verify-overlay.ps1
shared/: build.gradle.kts
site/: index.html
(+52 files in other folders)
