[package]
name = "vijanabarubaru"
version = "0.1.0"
description = "Vijana BaruBaru — desktop edition. Live TV, movies, and series."
authors = ["hexhoxhex"]
edition = "2021"

[lib]
# `_lib` suffix avoids name collision with the bin target on Windows
# where the .exe + .dll can't share the same stem.
name = "vijanabarubaru_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.4", features = [] }

[dependencies]
tauri = { version = "2.1.1", features = [] }
tauri-plugin-opener = "2.2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# Default features the Tauri CLI expects. The actual native features
# (devtools etc.) come in via the tauri.conf.json security/window
# blocks.
default = []
